# P2024

./: README.md
Desafios/: 2021136740-d1.c  CMakeLists.txt  main.c
Desafios/desafio2/: 2021136740.c  funcao.h  main.c
Desafios/desafio3/: 2021136740.c  lista.h  main.c
Exames/: AVISO_IMPORTANTE.txt
Exames/2022E/: CMakeLists.txt  ex1.c  ex2-3.c  ex4.c
Exames/2022N/: CMakeLists.txt  ex1.c  ex2-3.c  ex4.c
Exames/2022R/: CMakeLists.txt  ex1.c  ex2-3.c  ex4.c
Exames/2023N/: CMakeLists.txt  ex1.c  ex2-3.c  ex4.c
Exames/2023R/: CMakeLists.txt  ex1.c  ex2-3.c  ex4.c
Exames/2024N/: CMakeLists.txt  ex1.c  ex2.c  ex4.c
Exames/2024R/: CMakeLists.txt  ex1.c
Ficha1/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c
Ficha10/: CMakeLists.txt
Ficha10/ex1/: funcoes.c  funcoes.h  main.c
Ficha11/: CMakeLists.txt  cp.c  ex1.c  ex3.c
Ficha12/: CMakeLists.txt  ex9.c
Ficha13/: CMakeLists.txt
Ficha13/ex2/: banco.c  banco.h  ex2.c
Ficha2/: CMakeLists.txt  ex1.c  ex10.c  ex11.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
Ficha3/: CMakeLists.txt  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c  testes.c
Ficha4/: CMakeLists.txt  ex1-2-3.c  ex10.c  ex11.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
Ficha5/: CMakeLists-LAPTOP-650214JK.txt  CMakeLists.txt
Ficha5/ex1-2/: main.c  ponto.h  retangulo.c  retangulo.h
Ficha6/: CMakeLists.txt
Ficha6/ex1/: main.c  ponto.c  retangulo.c  tabela.c  tabela.h
Ficha6/ex2/: agenda.c  agenda.h  main.c
Ficha7/: CMakeLists.txt
Ficha8/: CMakeLists.txt  ex1.c  ex2-3.c  ex2.c
Ficha9/: CMakeLists.txt
(+21 files in other folders)
