cmake_minimum_required(VERSION 3.27)
project(Ficha4 C)

set(CMAKE_C_STANDARD 99)

add_executable(testes main.c)
add_executable(ex1-2-3 ex1-2-3.c)
add_executable(ex4 ex4.c)
add_executable(ex5 ex5.c)
add_executable(ex6 ex6.c)
add_executable(ex7 ex7.c)
add_executable(ex8 ex8.c)
add_executable(ex9 ex9.c)
add_executable(ex10 ex10.c)
add_executable(ex11 ex11.c)
